--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--app-background-color);
+  color: var(--text-color);
 }
 
 code {
@@ -20,8 +20,20 @@ code {
 
 /* You can define custom CSS variables here too */
 :root {
-  --primary-color:rgb(192, 192, 192); /* Example: blue-500 */
+  --primary-color: rgb(192, 192, 192); /* Example: blue-500 */
   --app-background-color: #FFFFF5;
+  --text-color: #000000; /* Default text color for light mode */
+}
+
+.light {
+  --primary-color: #000000;
+  --app-background-color: #FFFFFF;
+}
+
+.dark {
+  --primary-color: #38bdf8;
+  --app-background-color: #18181b;
+  --text-color: #FFFFFF; /* Text color for dark mode */
 }
 
 /* Any global classes that apply to multiple components, though with Tailwind, this is less common */
